Resolves: tdf#113695 crash in color picker after parent is closed

Change-Id: If2217abed784bf24e37e3403fa33cd2663dc51a4
Reviewed-on: https://gerrit.libreoffice.org/44548
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: David Tardon <dtardon@redhat.com>