include/svx/colorwindow.hxx
@@ -63,7 +63,7 @@ private:
     OUString            maCommand;
     Link<const NamedColor&, void> maSelectedLink;
 
-    PaletteManager&     mrPaletteManager;
+    std::shared_ptr<PaletteManager> mxPaletteManager;
     BorderColorStatus&  mrBorderColorStatus;
 
     ColorSelectFunction maColorSelectFunction;
@@ -79,7 +79,7 @@ private:
 
 public:
     SvxColorWindow(const OUString& rCommand,
-                   PaletteManager& rPaletteManager,
+                   std::shared_ptr<PaletteManager>& rPaletteManager,
                    BorderColorStatus& rBorderColorStatus,
                    sal_uInt16 nSlotId,
                    const css::uno::Reference< css::frame::XFrame >& rFrame,
